# Md2Design

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  PULL_REQUEST.md  README.md  deploy.bat  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.trae/documents/: Implementation of Data Protection and .d2d File Support.md  应用崩溃防护与性能优化方案.md
assets/: index-B0RvYaih.js  index-B9XF6Tok.js  index-B9s5ZfjV.js  index-BB_4ibAy.js  index-BFH-Gh2z.css  index-BF_YczLx.js  index-BIfBnD-E.css  index-BKfTSlg8.css  index-BNT0CaHe.js  index-BQf2IAs9.css  index-BV02bkjf.css  index-BZ71V6Hu.css  index-BbCWJX5m.css  index-Bd2vmZWk.css  index-BderfiMC.css  index-BkFaUdpq.css  index-Brubt2bW.js  index-Btcc5T4K.css  index-BzTgp-6p.js  index-C-OkSuvo.js  index-C-QsYLEm.css  index-C1zlmGkL.css  index-C5X_hxht.js  index-C6CnkXX-.js  index-CB25l09L.css  index-CFU_BCdg.js  index-CFg5Vr9M.js  index-CGuaqyCe.js  index-CH8yN6bG.css  index-CQOQoV-V.js  index-CTB46g-K.css  index-CU2UfGiE.js  index-CU6MIxgU.css  index-CUfvJEG0.css  index-CV-JQVo-.js  index-CV0VYvzp.js  index-CbQRcjJ3.js  index-CdE4E4P7.css  index-CeIB37qg.js  index-CgNXr4GT.js  (+41 more)
scripts/: update-web-icon.js
src/: App.tsx  i18n.ts  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ChangelogModal.tsx  Editor.tsx  ErrorBoundary.tsx  NewYearEffect.tsx  Preview.tsx  Sidebar.tsx  TopBar.tsx
src/components/sidebar/: BackgroundSection.tsx  (+9 more)
src/hooks/: useExport.ts
src/test/: setup.ts
src/utils/: cardUtils.ts  fonts.ts  pagination.test.ts  pagination.ts  turndown.ts
